# lab_ref

./: .gitignore  DEVELOPMENT.md  README.md  pyproject.toml  setup.py
examples/: README.md  README_custom_references.md  biomaterial_approach_demo.py  custom_references_demo.py  hybrid_approach_demo.py
lab_ref/: __init__.py  models.py  utils.py
lab_ref/references/: arterial_blood.json  blood_test.json  capillary_blood.json  lab_studies.json  urine.json  venous_blood.json
tests/: test_biomaterial_functionality.py  test_custom_references.py  test_oop_models.py  test_utils.py
